8146197: SignatureAlgorithms.java after push of JDK-8146192
Reviewed-by: henryjen, jnimeh, mullan